--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,8 @@ img {
   font-size: 20px;
   border-radius: 40px;
 }
-#footer .social-links a:hover {
+#footer .social-links a:hover,
+#footer .social-links a:active {
   border: transparent;
   background: linear-gradient(
     90deg,
