--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ a.aLink:hover {
   justify-content: center;
   font-family: 'Dosis', sans-serif;
   font-size: 12px;
+  height: 100vh;
 }
 img {
   width: 25rem;
@@ -50,6 +51,7 @@ img {
 }
 #contents .loader .load {
   background-color: #313031;
+  border-radius: 10px;
 }
 #contents .loader .load .percentage {
   background: linear-gradient(
@@ -59,6 +61,7 @@ img {
     rgba(215, 135, 11, 1) 88%
   );
   height: 10px;
+  border-radius: 10px;
 }
 #contents .loader .info {
   display: flex;
@@ -102,4 +105,25 @@ img {
     rgba(215, 135, 11, 1) 88%
   );
   color: black;
+}
+@media (max-width: 600px) {
+  img {
+    width: 40rem;
+    height: 40rem;
+  }
+  #contents .loader .load .percentage {
+    height: 20px;
+  }
+  #contents .loader .info {
+    font-size: 24px;
+  }
+  #footer {
+    margin-bottom: 50px;
+  }
+  #footer .social-links a {
+    width: 50px;
+    height: 50px;
+    font-size: 30px;
+    border-radius: 50px;
+  }
 }
