--- a/styles.css
+++ b/styles.css
@@ -106,24 +106,41 @@ img {
   );
   color: black;
 }
-/* @media (max-width: 600px) {
+@media (max-width: 600px) {
   img {
-    width: 30rem;
-    height: 30rem;
+    width: 20rem;
+    height: 20rem;
   }
-  #contents .loader .load .percentage {
+  /* #contents .loader .load .percentage {
     height: 20px;
-  }
-  #contents .loader .info {
+  } */
+  /* #contents .loader .info {
     font-size: 24px;
-  }
-  #footer {
+  } */
+  /* #footer {
     margin-bottom: 50px;
-  }
+  } */
   #footer .social-links a {
     width: 50px;
     height: 50px;
     font-size: 30px;
     border-radius: 50px;
   }
-} */
+  #footer {
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
+  #contents {
+    font-size: 18px;
+    line-height: 24px;
+    margin-top: 0;
+    padding-bottom: 10px;
+  }
+  #contents h2 {
+    font-size: 3rem;
+    line-height: 3rem;
+  }
+  .wrap {
+    width: 20rem;
+  }
+}
