--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,7 @@ img {
   img {
     width: 20rem;
     height: 20rem;
+    margin-top: -25px;
   }
   /* #contents .loader .load .percentage {
     height: 20px;
