--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,6 @@ a.aLink:hover {
   justify-content: center;
   font-family: 'Dosis', sans-serif;
   font-size: 12px;
-  /* height: 100vh; */
 }
 img {
   width: 25rem;
@@ -112,24 +111,15 @@ img {
     height: 20rem;
     margin-top: -25px;
   }
-  /* #contents .loader .load .percentage {
-    height: 20px;
-  } */
-  /* #contents .loader .info {
-    font-size: 24px;
-  } */
-  /* #footer {
-    margin-bottom: 50px;
-  } */
   #footer .social-links a {
     width: 40px;
     height: 40px;
-    font-size: 25px;
+    font-size: 20px;
     border-radius: 40px;
   }
   #footer {
     margin-top: 0;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
   }
   #contents {
     font-size: 18px;
@@ -143,5 +133,8 @@ img {
   }
   .wrap {
     width: 20rem;
+  }
+  #main {
+    height: 100vh;
   }
 }
