--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ img {
 }
 #footer .social-links a:hover,
 #footer .social-links a:active {
-  border: 2px solid transparent;
+  border: 2px solid #093b3a;
   background: linear-gradient(
     90deg,
     rgba(235, 182, 81, 1) 0%,
